--- a/math.tex
+++ b/math.tex
@@ -202,6 +202,8 @@
 \DeclareMathOperator*{\poly}{\mathrm{poly}}
 \DeclareMathOperator*{\prox}{\mathrm{prox}}
 \DeclareMathOperator*{\vol}{\mathrm{vol}}
+\DeclareMathOperator*{\diag}{\mathrm{diag}}
+\DeclareMathOperator*{\nnz}{\mathrm{nnz}}
 
 % words
 \def\naive{na\"ive}
