Update math operator to support beamer

--- a/math.tex
+++ b/math.tex
@@ -194,16 +194,16 @@
 % argmin and argmax
 \DeclareMathOperator*{\argmax}{\arg\max}
 \DeclareMathOperator*{\argmin}{\arg\min}
-\DeclareMathOperator*{\lcm}{\mathrm{lcm}}
-\DeclareMathOperator*{\rank}{\mathrm{rank}}
-\DeclareMathOperator*{\tr}{\mathrm{tr}}
-\DeclareMathOperator*{\sgn}{\mathrm{sgn}}
+\DeclareMathOperator*{\lcm}{lcm}
+\DeclareMathOperator*{\rank}{rank}
+\DeclareMathOperator*{\tr}{tr}
+\DeclareMathOperator*{\sgn}{sgn}
 \DeclareMathOperator*{\irv}{\mathbf{1}} % indicator random variable
-\DeclareMathOperator*{\poly}{\mathrm{poly}}
-\DeclareMathOperator*{\prox}{\mathrm{prox}}
-\DeclareMathOperator*{\vol}{\mathrm{vol}}
-\DeclareMathOperator*{\diag}{\mathrm{diag}}
-\DeclareMathOperator*{\nnz}{\mathrm{nnz}}
+\DeclareMathOperator*{\poly}{poly}
+\DeclareMathOperator*{\prox}{prox}
+\DeclareMathOperator*{\vol}{vol}
+\DeclareMathOperator*{\diag}{diag}
+\DeclareMathOperator*{\nnz}{nnz}
 
 % words
 \def\naive{na\"ive}
