--- a/template.tex
+++ b/template.tex
@@ -10,6 +10,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{hyperref}
+\usepackage{cleveref}
 \usepackage{verbatim}
 \usepackage{natbib}
 \usepackage{tikz}
