--- a/references.bib
+++ b/references.bib
@@ -1,24 +1,17 @@
-@inproceedings{allen2018make,
- author = {Zeyuan Allen{-}Zhu},
- booktitle = {Advances in Neural Information Processing Systems 31: Annual Conference
-on Neural Information Processing Systems 2018, NeurIPS 2018, December
-3-8, 2018, Montr{\'{e}}al, Canada},
- pages = {1165--1175},
- title = {How To Make the Gradients Small Stochastically: Even Faster Convex
-and Nonconvex {SGD}},
- year = {2018}
+@article{allen2018make,
+  title={How To Make the Gradients Small Stochastically: Even Faster Convex and Nonconvex SGD},
+  author={Allen-Zhu, Zeyuan},
+  journal={Advances in Neural Information Processing Systems},
+  volume={31},
+  pages={1157--1167},
+  year={2018}
 }
 
 @inproceedings{chen2018convergence,
- author = {Xiangyi Chen and
-Sijia Liu and
-Ruoyu Sun and
-Mingyi Hong},
- booktitle = {7th International Conference on Learning Representations, {ICLR} 2019,
-New Orleans, LA, USA, May 6-9, 2019},
- title = {On the Convergence of A Class of {A}dam-Type Algorithms for Non-Convex
-Optimization},
- year = {2019}
+  title={On the Convergence of A Class of Adam-Type Algorithms for Non-Convex Optimization},
+  author={Chen, Xiangyi and Liu, Sijia and Sun, Ruoyu and Hong, Mingyi},
+  booktitle={International Conference on Learning Representations},
+  year={2018}
 }
 
 @article{defossez2020simple,
@@ -35,15 +28,13 @@ Optimization},
  year = {2021}
 }
 
-@inproceedings{duchi2011adaptive,
- author = {John C. Duchi and
-Elad Hazan and
-Yoram Singer},
- booktitle = {{COLT} 2010 - The 23rd Conference on Learning Theory, Haifa, Israel,
-June 27-29, 2010},
- pages = {257--269},
- title = {Adaptive Subgradient Methods for Online Learning and Stochastic Optimization},
- year = {2010}
+@article{duchi2011adaptive,
+  title={Adaptive subgradient methods for online learning and stochastic optimization.},
+  author={Duchi, John and Hazan, Elad and Singer, Yoram},
+  journal={Journal of machine learning research},
+  volume={12},
+  number={7},
+  year={2011}
 }
 
 @article{ghadimi2016accelerated,
@@ -60,31 +51,24 @@ June 27-29, 2010},
 Jimmy Ba},
  booktitle = {3rd International Conference on Learning Representations, {ICLR} 2015,
 San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
- title = {{A}dam: {A} Method for Stochastic Optimization},
+ title = {Adam: {A} Method for Stochastic Optimization},
  year = {2015}
 }
 
 @inproceedings{lu2018accelerating,
- author = {Haihao Lu and
-Robert M. Freund and
-Vahab S. Mirrokni},
- booktitle = {Proceedings of the 35th International Conference on Machine Learning,
-{ICML} 2018, Stockholmsm{\"{a}}ssan, Stockholm, Sweden, July 10-15,
-2018},
- pages = {3263--3272},
- series = {Proceedings of Machine Learning Research},
- title = {Accelerating Greedy Coordinate Descent Methods},
- year = {2018}
+  title={Accelerating greedy coordinate descent methods},
+  author={Lu, Haihao and Freund, Robert and Mirrokni, Vahab},
+  booktitle={International Conference on Machine Learning},
+  pages={3257--3266},
+  year={2018},
+  organization={PMLR}
 }
 
 @inproceedings{reddi2018convergence,
- author = {Sashank J. Reddi and
-Satyen Kale and
-Sanjiv Kumar},
- booktitle = {6th International Conference on Learning Representations, {ICLR} 2018,
-Vancouver, BC, Canada, April 30 - May 3, 2018, Conference Track Proceedings},
- title = {On the Convergence of {A}dam and Beyond},
- year = {2018}
+  title={On the Convergence of Adam and Beyond},
+  author={Reddi, Sashank J and Kale, Satyen and Kumar, Sanjiv},
+  booktitle={International Conference on Learning Representations},
+  year={2018}
 }
 
 @article{yang2016unified,
@@ -92,6 +76,14 @@ Vancouver, BC, Canada, April 30 - May 3, 2018, Conference Track Proceedings},
  journal = {arXiv preprint arXiv:1604.03257},
  title = {Unified convergence analysis of stochastic momentum methods for convex and non-convex optimization},
  year = {2016}
+}
+
+@article{zhang2020adaptive,
+  title={Why are Adaptive Methods Good for Attention Models?},
+  author={Zhang, Jingzhao and Karimireddy, Sai Praneeth and Veit, Andreas and Kim, Seungyeon and Reddi, Sashank and Kumar, Sanjiv and Sra, Suvrit},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  year={2020}
 }
 
 @article{zhou2018convergence,
