--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{yan}
+\usepackage{panyan}
 
 \title{Template}
 \author{Yan Pan}
