--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,89 @@
+@article{chernoff1952measure,
+  title={A measure of asymptotic efficiency for tests of a hypothesis based on the sum of observations},
+  author={Chernoff, Herman},
+  journal={The Annals of Mathematical Statistics},
+  pages={493--507},
+  year={1952},
+  publisher={JSTOR}
+}
+
+@incollection{hoeffding1994probability,
+  title={Probability inequalities for sums of bounded random variables},
+  author={Hoeffding, Wassily},
+  booktitle={The collected works of Wassily Hoeffding},
+  pages={409--426},
+  year={1994},
+  publisher={Springer}
+}
+
+@article{tropp2012user,
+  title={User-friendly tail bounds for sums of random matrices},
+  author={Tropp, Joel A},
+  journal={Foundations of computational mathematics},
+  volume={12},
+  number={4},
+  pages={389--434},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{bubeck2015convex,
+  title={Convex Optimization: Algorithms and Complexity},
+  author={Bubeck, S{\'e}bastien},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={8},
+  number={3-4},
+  pages={231--357},
+  year={2015},
+  publisher={Now Publishers Inc. Hanover, MA, USA}
+}
+
+@article{woodruff2014sketching,
+  title={Sketching as a Tool for Numerical Linear Algebra},
+  author={Woodruff, David P and others},
+  journal={Foundations and Trends{\textregistered} in Theoretical Computer Science},
+  volume={10},
+  number={1--2},
+  pages={1--157},
+  year={2014},
+  publisher={Now Publishers, Inc.}
+}
+
+@inproceedings{clarkson2013low,
+  title={Low rank approximation and regression in input sparsity time},
+  author={Clarkson, Kenneth L and Woodruff, David P},
+  booktitle={Proceedings of the forty-fifth annual ACM symposium on Theory of Computing},
+  pages={81--90},
+  year={2013}
+}
+
+@inproceedings{jacot2018neural,
+  title={Neural tangent kernel: convergence and generalization in neural networks},
+  author={Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
+  booktitle={Proceedings of the 32nd International Conference on Neural Information Processing Systems},
+  pages={8580--8589},
+  year={2018}
+}
+
+@article{allen2018convex,
+  title={From Convex to Nonconvex Optimization: Algorithm Design and Global Convergence},
+  author={Allen-Zhu, Zeyuan},
+  year={2018}
+}
+
+@article{jain2017non,
+  title={Non-convex Optimization for Machine Learning},
+  author={Jain, Prateek and Kar, Purushottam},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={10},
+  number={3-4},
+  pages={142--336},
+  year={2017},
+  publisher={Now Publishers Inc. Hanover, MA, USA}
+}
+
 @article{allen2018make,
-  title={How To Make the Gradients Small Stochastically: Even Faster Convex and Nonconvex SGD},
+  title={How To Make the Gradients Small Stochastically: Even Faster Convex and Nonconvex {SGD}},
   author={Allen-Zhu, Zeyuan},
   journal={Advances in Neural Information Processing Systems},
   volume={31},
@@ -8,7 +92,7 @@
 }
 
 @inproceedings{chen2018convergence,
-  title={On the Convergence of A Class of Adam-Type Algorithms for Non-Convex Optimization},
+  title={On the Convergence of A Class of {A}dam-Type Algorithms for Non-Convex Optimization},
   author={Chen, Xiangyi and Liu, Sijia and Sun, Ruoyu and Hong, Mingyi},
   booktitle={International Conference on Learning Representations},
   year={2018}
@@ -37,6 +121,13 @@
   year={2011}
 }
 
+@article{fang2019convergence,
+  title={Convergence analyses of online {A}dam algorithm in convex setting and two-layer relu neural network},
+  author={Fang, Biyi and Klabjan, Diego},
+  journal={arXiv preprint arXiv:1905.09356},
+  year={2019}
+}
+
 @article{ghadimi2016accelerated,
  author = {Ghadimi, Saeed and Lan, Guanghui},
  journal = {Mathematical Programming},
@@ -51,8 +142,17 @@
 Jimmy Ba},
  booktitle = {3rd International Conference on Learning Representations, {ICLR} 2015,
 San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
- title = {Adam: {A} Method for Stochastic Optimization},
+ title = {{A}dam: {A} Method for Stochastic Optimization},
  year = {2015}
+}
+
+@inproceedings{li2019convergence,
+  title={On the convergence of stochastic gradient descent with adaptive stepsizes},
+  author={Li, Xiaoyu and Orabona, Francesco},
+  booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
+  pages={983--992},
+  year={2019},
+  organization={PMLR}
 }
 
 @inproceedings{lu2018accelerating,
@@ -65,10 +165,26 @@ San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
 }
 
 @inproceedings{reddi2018convergence,
-  title={On the Convergence of Adam and Beyond},
+  title={On the Convergence of {A}dam and Beyond},
   author={Reddi, Sashank J and Kale, Satyen and Kumar, Sanjiv},
   booktitle={International Conference on Learning Representations},
   year={2018}
+}
+
+@inproceedings{reddi2018adaptive,
+  title={Adaptive methods for nonconvex optimization},
+  author={Reddi, S and Zaheer, Manzil and Sachan, Devendra and Kale, Satyen and Kumar, Sanjiv},
+  booktitle={Proceeding of 32nd Conference on Neural Information Processing Systems (NIPS 2018)},
+  year={2018}
+}
+
+@inproceedings{ward2019adagrad,
+  title={AdaGrad stepsizes: Sharp convergence over nonconvex landscapes},
+  author={Ward, Rachel and Wu, Xiaoxia and Bottou, Leon},
+  booktitle={International Conference on Machine Learning},
+  pages={6677--6686},
+  year={2019},
+  organization={PMLR}
 }
 
 @article{yang2016unified,
@@ -93,3 +209,17 @@ San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
  year = {2018}
 }
 
+@inproceedings{zou2019sufficient,
+  title={A sufficient condition for convergences of {A}dam and {RMS}prop},
+  author={Zou, Fangyu and Shen, Li and Jie, Zequn and Zhang, Weizhong and Liu, Wei},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={11127--11135},
+  year={2019}
+}
+
+@article{zou2018weighted,
+  title={Weighted {A}dagrad with unified momentum},
+  author={Zou, Fangyu and Shen, Li and Jie, Zequn and Sun, Ju and Liu, Wei},
+  journal={arXiv preprint arXiv:1808.03408},
+  year={2018}
+}
