--- a/panyan.sty
+++ b/panyan.sty
@@ -1,17 +1,16 @@
 \usepackage{latexsym}
 \usepackage{amsmath, amssymb, amsthm, mathtools, thmtools, bbm}
+\usepackage{tabularx}
 \usepackage{setspace}
 \usepackage{geometry}
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{caption, subcaption}
-\usepackage{hyperref}
-\usepackage{cleveref}
+\usepackage{hyperref, cleveref}
 \usepackage{verbatim}
 \usepackage{natbib}
 \usepackage{tikz}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
+\usepackage{algorithm, algpseudocode}
 \usetikzlibrary{positioning}
 % \usepackage{mathptmx}
 \hypersetup{colorlinks,citecolor=black,filecolor=black,linkcolor=black,urlcolor=black}
@@ -87,15 +86,17 @@
 \newcommand{\ignore}[1]{}
 
 % probability type operators
-        \let\Pr\relax
-\DeclareMathOperator*{\Pr}{\mathbf{Pr}}
+\let\Pr\relax
+\DeclareMathOperator*{\Pr}{Pr}
 \DeclareMathOperator*{\E}{\mathbb{E}}
-\DeclareMathOperator*{\Var}{\mathbf{Var}}
-\DeclareMathOperator*{\Cov}{\mathbf{Cov}}
-\DeclareMathOperator*{\stddev}{\mathbf{stddev}}
+\DeclareMathOperator*{\Var}{Var}
+\DeclareMathOperator*{\Cov}{Cov}
+\DeclareMathOperator*{\stddev}{stddev}
 \DeclareMathOperator{\littlesum}{{\textstyle \sum}}
 \DeclareMathOperator{\littleprod}{{\textstyle \prod}}
 \DeclareMathOperator*{\avg}{avg}
+\DeclareMathOperator*{\argmax}{\arg\max}
+\DeclareMathOperator*{\argmin}{\arg\min}
 
 \newcommand{\pr}[1]{\Pr\normalfont\lbrack #1 \rbrack} %probability
 \newcommand{\ex}[1]{\E\normalfont\lbrack #1 \rbrack}%expectation
@@ -117,6 +118,11 @@
 \DeclareMathOperator{\Tr}{Tr}
 \DeclareMathOperator{\codim}{codim}
 \DeclareMathOperator{\diag}{diag}
+\DeclareMathOperator{\lcm}{lcm}
+\DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\one}{\mathbf{1}} % indicator random variable
+\DeclareMathOperator{\prox}{prox}
+\DeclareMathOperator{\nnz}{nnz}
 
 % number systems
 \newcommand{\R}{\mathbbm R}
