Update number systems

--- a/panyan.sty
+++ b/panyan.sty
@@ -13,7 +13,13 @@
 \usepackage{algorithm, algpseudocode}
 \usetikzlibrary{positioning}
 % \usepackage{mathptmx}
-\hypersetup{colorlinks,citecolor=black,filecolor=black,linkcolor=black,urlcolor=black}
+\hypersetup{
+    colorlinks=true,
+    citecolor=blue,
+    filecolor=magenta,
+    linkcolor=red,
+    urlcolor=cyan
+}
 
 \geometry{a4paper,scale=0.75}
 \setlength{\parindent}{2em}
@@ -125,12 +131,12 @@
 \DeclareMathOperator{\nnz}{nnz}
 
 % number systems
-\newcommand{\R}{\mathbbm R}
-\newcommand{\C}{\mathbbm C}
-\newcommand{\N}{\mathbbm N}
-\newcommand{\Z}{\mathbbm Z}
-\newcommand{\F}{\mathbbm F}
-\newcommand{\Q}{\mathbbm Q}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\F}{\mathbb{F}}
+\newcommand{\Q}{\mathbb{Q}}
 
 % complexity classes
 \newcommand{\PTIME}{\mathsf{P}}
