--- a/references.bib
+++ b/references.bib
@@ -16,6 +16,15 @@
   publisher={Springer}
 }
 
+@article{robbins1951stochastic,
+  title={A stochastic approximation method},
+  author={Robbins, Herbert and Monro, Sutton},
+  journal={The annals of mathematical statistics},
+  pages={400--407},
+  year={1951},
+  publisher={JSTOR}
+}
+
 @article{tropp2012user,
   title={User-friendly tail bounds for sums of random matrices},
   author={Tropp, Joel A},
@@ -91,29 +100,38 @@
   year={2018}
 }
 
+@inproceedings{bernstein2018signsgd,
+  title={{signSGD}: Compressed optimisation for non-convex problems},
+  author={Bernstein, Jeremy and Wang, Yu-Xiang and Azizzadenesheli, Kamyar and Anandkumar, Animashree},
+  booktitle={International Conference on Machine Learning},
+  pages={560--569},
+  year={2018},
+  organization={PMLR}
+}
+
 @inproceedings{chen2018convergence,
-  title={On the Convergence of A Class of {A}dam-Type Algorithms for Non-Convex Optimization},
+  title={On the Convergence of A Class of {Adam}-Type Algorithms for Non-Convex Optimization},
   author={Chen, Xiangyi and Liu, Sijia and Sun, Ruoyu and Hong, Mingyi},
   booktitle={International Conference on Learning Representations},
   year={2018}
 }
 
 @article{defossez2020simple,
- author = {D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
- journal = {arXiv preprint arXiv:2003.02395},
- title = {A Simple Convergence Proof of {A}dam and {A}dagrad},
- year = {2020}
+  title = {A Simple Convergence Proof of {A}dam and {A}dagrad},
+  author = {D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
+  journal = {arXiv preprint arXiv:2003.02395},
+  year = {2020}
 }
 
 @article{dou2021one,
- author = {Dou, Zehao and Li, Yuanzhi},
- journal = {arXiv preprint arXiv:2109.14213},
- title = {On the One-sided Convergence of {A}dam-type Algorithms in Non-convex Non-concave Min-max Optimization},
- year = {2021}
+  title = {On the One-sided Convergence of {Adam}-type Algorithms in Non-convex Non-concave Min-max Optimization},
+  author = {Dou, Zehao and Li, Yuanzhi},
+  journal = {arXiv preprint arXiv:2109.14213},
+  year = {2021}
 }
 
 @article{duchi2011adaptive,
-  title={Adaptive subgradient methods for online learning and stochastic optimization.},
+  title={Adaptive subgradient methods for online learning and stochastic optimization},
   author={Duchi, John and Hazan, Elad and Singer, Yoram},
   journal={Journal of machine learning research},
   volume={12},
@@ -122,7 +140,7 @@
 }
 
 @article{fang2019convergence,
-  title={Convergence analyses of online {A}dam algorithm in convex setting and two-layer relu neural network},
+  title={Convergence analyses of online {Adam} algorithm in convex setting and two-layer {ReLU} neural network},
   author={Fang, Biyi and Klabjan, Diego},
   journal={arXiv preprint arXiv:1905.09356},
   year={2019}
@@ -137,13 +155,19 @@
  year = {2016}
 }
 
-@inproceedings{kingma2014adam,
- author = {Diederik P. Kingma and
-Jimmy Ba},
- booktitle = {3rd International Conference on Learning Representations, {ICLR} 2015,
-San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
- title = {{A}dam: {A} Method for Stochastic Optimization},
- year = {2015}
+@inproceedings{huang2019nostalgic,
+  title={Nostalgic {ADAM}: Weighting more of the past gradients when designing the adaptive learning rate},
+  author={Huang, Haiwen and Wang, Chang and Dong, Bin},
+  booktitle={28th International Joint Conference on Artificial Intelligence, IJCAI 2019},
+  pages={2556--2562},
+  year={2019}
+}
+
+@article{kingma2014adam,
+  title={{Adam}: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
 }
 
 @inproceedings{li2019convergence,
@@ -165,7 +189,7 @@ San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
 }
 
 @inproceedings{reddi2018convergence,
-  title={On the Convergence of {A}dam and Beyond},
+  title={On the Convergence of {Adam} and Beyond},
   author={Reddi, Sashank J and Kale, Satyen and Kumar, Sanjiv},
   booktitle={International Conference on Learning Representations},
   year={2018}
@@ -179,7 +203,7 @@ San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
 }
 
 @inproceedings{ward2019adagrad,
-  title={AdaGrad stepsizes: Sharp convergence over nonconvex landscapes},
+  title={{AdaGrad} stepsizes: Sharp convergence over nonconvex landscapes},
   author={Ward, Rachel and Wu, Xiaoxia and Bottou, Leon},
   booktitle={International Conference on Machine Learning},
   pages={6677--6686},
@@ -210,7 +234,7 @@ San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
 }
 
 @inproceedings{zou2019sufficient,
-  title={A sufficient condition for convergences of {A}dam and {RMS}prop},
+  title={A sufficient condition for convergences of {Adam} and {RMSprop}},
   author={Zou, Fangyu and Shen, Li and Jie, Zequn and Zhang, Weizhong and Liu, Wei},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   pages={11127--11135},
@@ -218,7 +242,7 @@ San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
 }
 
 @article{zou2018weighted,
-  title={Weighted {A}dagrad with unified momentum},
+  title={Weighted {Adagrad} with unified momentum},
   author={Zou, Fangyu and Shen, Li and Jie, Zequn and Sun, Ju and Liu, Wei},
   journal={arXiv preprint arXiv:1808.03408},
   year={2018}
