Update sty and bib

--- a/panyan.sty
+++ b/panyan.sty
@@ -350,3 +350,5 @@
 % something for figures
 \newcommand{\myfig}[4]{\begin{figure}[H] \centering \includegraphics[width=#1\textwidth]{#2} \caption{#3} \label{#4} \end{figure}}
 
+% item equation
+\newenvironment{itemequation}{\hfill$\begin{aligned}[t]}{\end{aligned}$\hfill\null}
