--- a/references.bib
+++ b/references.bib
@@ -36,6 +36,17 @@
   publisher={Springer}
 }
 
+@article{tropp2015introduction,
+  title={An Introduction to Matrix Concentration Inequalities},
+  author={Tropp, Joel A},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={8},
+  number={1-2},
+  pages={1--230},
+  year={2015},
+  publisher={Now Publishers Inc. Hanover, MA, USA}
+}
+
 @article{bubeck2015convex,
   title={Convex Optimization: Algorithms and Complexity},
   author={Bubeck, S{\'e}bastien},
@@ -116,6 +127,13 @@
   year={2018}
 }
 
+@article{de2018convergence,
+  title={Convergence guarantees for RMSProp and ADAM in non-convex optimization and an empirical comparison to Nesterov acceleration},
+  author={De, Soham and Mukherjee, Anirbit and Ullah, Enayat},
+  journal={arXiv preprint arXiv:1807.06766},
+  year={2018}
+}
+
 @article{defossez2020simple,
   title = {A Simple Convergence Proof of {A}dam and {A}dagrad},
   author = {D{\'e}fossez, Alexandre and Bottou, L{\'e}on and Bach, Francis and Usunier, Nicolas},
@@ -146,13 +164,26 @@
   year={2019}
 }
 
+@article{ghadimi2013stochastic,
+  title={Stochastic first-and zeroth-order methods for nonconvex stochastic programming},
+  author={Ghadimi, Saeed and Lan, Guanghui},
+  journal={SIAM Journal on Optimization},
+  volume={23},
+  number={4},
+  pages={2341--2368},
+  year={2013},
+  publisher={SIAM}
+}
+
 @article{ghadimi2016accelerated,
- author = {Ghadimi, Saeed and Lan, Guanghui},
- journal = {Mathematical Programming},
- number = {1-2},
- pages = {59--99},
- title = {Accelerated gradient methods for nonconvex nonlinear and stochastic programming},
- year = {2016}
+  title={Accelerated gradient methods for nonconvex nonlinear and stochastic programming},
+  author={Ghadimi, Saeed and Lan, Guanghui},
+  journal={Mathematical Programming},
+  volume={156},
+  number={1-2},
+  pages={59--99},
+  year={2016},
+  publisher={Springer}
 }
 
 @inproceedings{huang2019nostalgic,
@@ -246,4 +277,15 @@
   author={Zou, Fangyu and Shen, Li and Jie, Zequn and Sun, Ju and Liu, Wei},
   journal={arXiv preprint arXiv:1808.03408},
   year={2018}
+}
+
+@article{richtarik2014iteration,
+  title={Iteration complexity of randomized block-coordinate descent methods for minimizing a composite function},
+  author={Richt{\'a}rik, Peter and Tak{\'a}{\v{c}}, Martin},
+  journal={Mathematical Programming},
+  volume={144},
+  number={1},
+  pages={1--38},
+  year={2014},
+  publisher={Springer}
 }
