Update reference with dblp

--- a/panyan.sty
+++ b/panyan.sty
@@ -165,6 +165,7 @@
 \newcommand{\ra}{\rangle}
 \newcommand{\wt}[1]{\widetilde{#1}}
 \newcommand{\wh}[1]{\widehat{#1}}
+\newcommand{\wb}[1]{\overline{#1}}
 \newcommand{\ol}[1]{\overline{#1}}
 \newcommand{\ul}[1]{\underline{#1}}
 \newcommand{\ot}{\otimes}
