Update reference with dblp

--- a/references.bib
+++ b/references.bib
@@ -16,7 +16,7 @@
   publisher={Springer}
 }
 
-@article{Robbins51stochastic,
+@article{RobbinsM51stochastic,
   title={A stochastic approximation method},
   author={Robbins, Herbert and Monro, Sutton},
   journal={The annals of mathematical statistics},
@@ -27,7 +27,7 @@
 
 @article{Tropp12user,
   title={User-friendly tail bounds for sums of random matrices},
-  author={Tropp, Joel A},
+  author={Joel A. Tropp},
   journal={Foundations of computational mathematics},
   volume={12},
   number={4},
@@ -38,7 +38,7 @@
 
 @article{Tropp15introduction,
   title={An Introduction to Matrix Concentration Inequalities},
-  author={Tropp, Joel A},
+  author={Joel A. Tropp},
   journal={Foundations and Trends{\textregistered} in Machine Learning},
   volume={8},
   number={1-2},
@@ -49,7 +49,7 @@
 
 @article{Bubeck15convex,
   title={Convex Optimization: Algorithms and Complexity},
-  author={Bubeck, S{\'e}bastien},
+  author={S{\'e}bastien Bubeck},
   journal={Foundations and Trends{\textregistered} in Machine Learning},
   volume={8},
   number={3-4},
@@ -60,7 +60,7 @@
 
 @article{Woodruff14sketching,
   title={Sketching as a Tool for Numerical Linear Algebra},
-  author={Woodruff, David P and others},
+  author={David P. Woodruff},
   journal={Foundations and Trends{\textregistered} in Theoretical Computer Science},
   volume={10},
   number={1--2},
@@ -112,13 +112,13 @@
 
 @article{Allen18convex,
   title={From Convex to Nonconvex Optimization: Algorithm Design and Global Convergence},
-  author={Allen-Zhu, Zeyuan},
+  author={Zeyuan Allen{-}Zhu},
   year={2018}
 }
 
-@article{Jain17non,
+@article{JainK17non,
   title={Non-convex Optimization for Machine Learning},
-  author={Jain, Prateek and Kar, Purushottam},
+  author={Prateek Jain and Purushottam Kar},
   journal={Foundations and Trends{\textregistered} in Machine Learning},
   volume={10},
   number={3-4},
